# s2smtp

./: .bettercodehub.yml  CMakeLists.txt  LICENSE  README.md  s2smtpConfig.h.in
.github/workflows/: build-develop.yml  build.yml
cmake/: Findcppcodec.cmake  s2smtpConfig.cmake.in
examples/: CMakeLists.txt  example.cpp
include/s2smtp/: s2smtp.hpp  s2smtp_error.hpp
include/s2smtp/mime/: address.hpp  attachment.hpp  charset.hpp  message.hpp  mime_error.hpp  text.hpp
include/s2smtp/network/: base_channel.hpp  network_error.hpp
include/s2smtp/smtp/: client.hpp  sender.hpp  server_reply.hpp  smtp_error.hpp
src/: overloaded.hpp
src/mime/: address.cpp  attachment.cpp  charset.cpp  message.cpp  text.cpp
src/network/: channel.cpp  channel.hpp  channel_private.hpp
src/parsing/: smtp_parse.cpp  smtp_parse.hpp
src/serialization/mime/: address_serialization.cpp  address_serialization.hpp  header_serialization.cpp  header_serialization.hpp  message_serialization.cpp  message_serialization.hpp  text_serialization.cpp  text_serialization.hpp
src/serialization/smtp/: commands_serialization.cpp  commands_serialization.hpp
src/smtp/: client.cpp  commands.cpp  commands.hpp  sender.cpp  server_reply.cpp
tests/: CMakeLists.txt
tests/test_mime/: CMakeLists.txt  main_test_mime.cpp  test_address.cpp  test_attachment.cpp  test_charset.cpp  test_message.cpp  test_text.cpp
tests/test_parsing/: CMakeLists.txt  main_test_parsing.cpp  test_smtp_parse.cpp
tests/test_serialization/: CMakeLists.txt  main_test_serialization.cpp  test_address_serialization.cpp  test_commands_serialization.cpp  test_message_serialization.cpp  test_text_serialization.cpp
tests/test_smtp/: CMakeLists.txt  main_test_smtp.cpp  test_commands.cpp  test_server_reply.cpp
